# rust

./: .gitignore  Cargo.toml  README.md  binarySearch.rs  compress.rs
src/: main.rs
