
[package]
name = "web-server"
version = "0.1.0"
authors = ["Mehrdad Mehraban <mehraban.mehrdad@gmail.com>"]
edition = "2021"
[http]
proxy = "http://my.corp.proxy:8081"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
actix-web = "4.3.1"
serde_json = "1.0.74"
